--- a/After/BBBankAPI/Properties/launchSettings.json
+++ b/After/BBBankAPI/Properties/launchSettings.json
@@ -1,28 +1,28 @@
-﻿{
+{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:32421",
-      "sslPort": 44348
+      "applicationUrl": "http://localhost:5070",
+      "sslPort": 0
     }
   },
   "profiles": {
     "BBBankAPI": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7146;http://localhost:5146",
+      "launchUrl": "api/Transaction/GetLast12MonthBalances",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5070;",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "api/Transaction/GetLast12MonthBalances",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
